--- a/cinema/package.json
+++ b/cinema/package.json
@@ -7,13 +7,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
+    "normalize-scss": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "sass": "^1.50.0",
     "web-vitals": "^2.1.4"
   },
